--- a/linear-regression-application.html
+++ b/linear-regression-application.html
@@ -109,12 +109,16 @@
 <li><a class="" href="homework-for-week-8.html">Homework for Week 8</a></li>
 <li><a class="" href="glossary-5.html">Glossary</a></li>
 <li><a class="" href="flashcards-5.html">Flashcards</a></li>
+<li class="book-part">Markdown</li>
+<li><a class="" href="professional-writing-in-political-science.html">Professional Writing in Political Science</a></li>
+<li><a class="" href="introduction-to-markdown.html">Introduction to Markdown</a></li>
+<li><a class="" href="assessment-template.html">Assessment Template</a></li>
 <li class="book-part">Downloads</li>
 <li><a class="" href="downloads.html">Downloads</a></li>
 <li class="book-part">Glossary</li>
 <li><a class="" href="glossary-6.html">Glossary</a></li>
 <li class="book-part">List of References</li>
-<li><a class="" href="list-of-references.html">List of References</a></li>
+<li><a class="" href="list-of-references-1.html">List of References</a></li>
 </ul>
 
         <div class="book-extra">
@@ -428,7 +432,7 @@ F-statistic: 7.913 on 2 and 22 DF,  p-value: 0.002577</code></pre>
 
   <div class="col-12 col-md-6 mt-3">
     <p>"<strong><p><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</p></strong>" was written by </p>
-<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 07 August, 2025.
+<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 12 August, 2025.
   </div>
 
   <div class="col-12 col-md-6 mt-3">
