--- a/probit-application.html
+++ b/probit-application.html
@@ -109,12 +109,16 @@
 <li><a class="" href="homework-for-week-8.html">Homework for Week 8</a></li>
 <li><a class="" href="glossary-5.html">Glossary</a></li>
 <li><a class="" href="flashcards-5.html">Flashcards</a></li>
+<li class="book-part">Markdown</li>
+<li><a class="" href="professional-writing-in-political-science.html">Professional Writing in Political Science</a></li>
+<li><a class="" href="introduction-to-markdown.html">Introduction to Markdown</a></li>
+<li><a class="" href="assessment-template.html">Assessment Template</a></li>
 <li class="book-part">Downloads</li>
 <li><a class="" href="downloads.html">Downloads</a></li>
 <li class="book-part">Glossary</li>
 <li><a class="" href="glossary-6.html">Glossary</a></li>
 <li class="book-part">List of References</li>
-<li><a class="" href="list-of-references.html">List of References</a></li>
+<li><a class="" href="list-of-references-1.html">List of References</a></li>
 </ul>
 
         <div class="book-extra">
@@ -315,8 +319,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_yrey9wy6hepk8yguy7ax(i, j, css_id) {
-          var table = document.getElementById("tinytable_yrey9wy6hepk8yguy7ax");
+      function styleCell_q5ii6v1dpo7zoy10am9o(i, j, css_id) {
+          var table = document.getElementById("tinytable_q5ii6v1dpo7zoy10am9o");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -326,7 +330,7 @@ Number of Fisher Scoring iterations: 5</code></pre>
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_yrey9wy6hepk8yguy7ax');
+        var table = document.getElementById('tinytable_q5ii6v1dpo7zoy10am9o');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -334,8 +338,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_yrey9wy6hepk8yguy7ax(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_yrey9wy6hepk8yguy7ax");
+      function spanCell_q5ii6v1dpo7zoy10am9o(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_q5ii6v1dpo7zoy10am9o");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -365,36 +369,36 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_8dqtesfs0ndubhi5ixu3',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_oasdq0fhe613gcyyuj8t',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_tok9iphgq9ytpfj0n1di',}, 
-          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_v82emj14psj8wvuo1n0r',}, 
-          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_oybodgv10llb55onra8m',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_0vx4hbdmw8kngg57kt98',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_nevbrp9nnizcp1azkh91',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_319m6godge1rr7xx6yhq',}, 
+          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_vz2ff1snzzgmh9kne2of',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_9s0cjcp8i8gvyibfmxtf',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_oy1yjw3h7i52rhmmklac',}, 
+          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_8lujorhsbxr09odrsafe',}, 
+          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_imwx6f1mv7farixps013',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_ckmai4y7jhyc8rnuwjw3',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_c0c40wkpty6h8oncz39n',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_chs8an941pd6vfiq2ptk',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_yrey9wy6hepk8yguy7ax(cell.i, cell.j, group.css_id);
+                  styleCell_q5ii6v1dpo7zoy10am9o(cell.i, cell.j, group.css_id);
               });
           });
       });
     </script><style>
       /* tinytable css entries after */
-      .table td.tinytable_css_8dqtesfs0ndubhi5ixu3, .table th.tinytable_css_8dqtesfs0ndubhi5ixu3 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_oasdq0fhe613gcyyuj8t, .table th.tinytable_css_oasdq0fhe613gcyyuj8t { text-align: center; }
-      .table td.tinytable_css_tok9iphgq9ytpfj0n1di, .table th.tinytable_css_tok9iphgq9ytpfj0n1di { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_v82emj14psj8wvuo1n0r, .table th.tinytable_css_v82emj14psj8wvuo1n0r { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_oybodgv10llb55onra8m, .table th.tinytable_css_oybodgv10llb55onra8m { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_0vx4hbdmw8kngg57kt98, .table th.tinytable_css_0vx4hbdmw8kngg57kt98 { text-align: left; }
-      .table td.tinytable_css_nevbrp9nnizcp1azkh91, .table th.tinytable_css_nevbrp9nnizcp1azkh91 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_319m6godge1rr7xx6yhq, .table th.tinytable_css_319m6godge1rr7xx6yhq { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_vz2ff1snzzgmh9kne2of, .table th.tinytable_css_vz2ff1snzzgmh9kne2of { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_9s0cjcp8i8gvyibfmxtf, .table th.tinytable_css_9s0cjcp8i8gvyibfmxtf { text-align: center; }
+      .table td.tinytable_css_oy1yjw3h7i52rhmmklac, .table th.tinytable_css_oy1yjw3h7i52rhmmklac { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_8lujorhsbxr09odrsafe, .table th.tinytable_css_8lujorhsbxr09odrsafe { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_imwx6f1mv7farixps013, .table th.tinytable_css_imwx6f1mv7farixps013 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_ckmai4y7jhyc8rnuwjw3, .table th.tinytable_css_ckmai4y7jhyc8rnuwjw3 { text-align: left; }
+      .table td.tinytable_css_c0c40wkpty6h8oncz39n, .table th.tinytable_css_c0c40wkpty6h8oncz39n { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_chs8an941pd6vfiq2ptk, .table th.tinytable_css_chs8an941pd6vfiq2ptk { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
 <div class="container">
-      <div class="inline-table"><table class="table table-borderless" id="tinytable_yrey9wy6hepk8yguy7ax" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <div class="inline-table"><table class="table table-borderless" id="tinytable_q5ii6v1dpo7zoy10am9o" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
 <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -485,8 +489,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_orer97shxw40p0zprv6l(i, j, css_id) {
-          var table = document.getElementById("tinytable_orer97shxw40p0zprv6l");
+      function styleCell_jn8sl0w8umejbzwnbj54(i, j, css_id) {
+          var table = document.getElementById("tinytable_jn8sl0w8umejbzwnbj54");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -496,7 +500,7 @@ Number of Fisher Scoring iterations: 5</code></pre>
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_orer97shxw40p0zprv6l');
+        var table = document.getElementById('tinytable_jn8sl0w8umejbzwnbj54');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -504,8 +508,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_orer97shxw40p0zprv6l(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_orer97shxw40p0zprv6l");
+      function spanCell_jn8sl0w8umejbzwnbj54(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_jn8sl0w8umejbzwnbj54");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -535,36 +539,36 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_octqwhuy9nok9iz3ngkt',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_ccl4d13d08op11xn0pnf',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_22f3gulb9a2rvbozicxd',}, 
-          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_ep2xxlp7hupp1qxcbnpc',}, 
-          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_60mw57w11u7xtze1h0d0',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_kbjrrfjoa0v2dfka5dig',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_oih6xg68upnl01lz9xdi',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_dd9ic6nk6ayrttu4gmsa',}, 
+          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_6f7c7d1b4j3y25k3f8dm',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_zige6eezn2f2erbf6q1e',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_kprfngmq0ptww2bthpv7',}, 
+          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_nki5ebcb55jrn2vvnivx',}, 
+          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_9ve8ro80tjjm0xg2kvip',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_cer53ln24cmeyhm78waj',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_rrp89ne67ha8ulpju4uf',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_y7gfa0ycbn5np47i9726',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_orer97shxw40p0zprv6l(cell.i, cell.j, group.css_id);
+                  styleCell_jn8sl0w8umejbzwnbj54(cell.i, cell.j, group.css_id);
               });
           });
       });
     </script><style>
       /* tinytable css entries after */
-      .table td.tinytable_css_octqwhuy9nok9iz3ngkt, .table th.tinytable_css_octqwhuy9nok9iz3ngkt { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_ccl4d13d08op11xn0pnf, .table th.tinytable_css_ccl4d13d08op11xn0pnf { text-align: center; }
-      .table td.tinytable_css_22f3gulb9a2rvbozicxd, .table th.tinytable_css_22f3gulb9a2rvbozicxd { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_ep2xxlp7hupp1qxcbnpc, .table th.tinytable_css_ep2xxlp7hupp1qxcbnpc { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_60mw57w11u7xtze1h0d0, .table th.tinytable_css_60mw57w11u7xtze1h0d0 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_kbjrrfjoa0v2dfka5dig, .table th.tinytable_css_kbjrrfjoa0v2dfka5dig { text-align: left; }
-      .table td.tinytable_css_oih6xg68upnl01lz9xdi, .table th.tinytable_css_oih6xg68upnl01lz9xdi { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_dd9ic6nk6ayrttu4gmsa, .table th.tinytable_css_dd9ic6nk6ayrttu4gmsa { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_6f7c7d1b4j3y25k3f8dm, .table th.tinytable_css_6f7c7d1b4j3y25k3f8dm { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_zige6eezn2f2erbf6q1e, .table th.tinytable_css_zige6eezn2f2erbf6q1e { text-align: center; }
+      .table td.tinytable_css_kprfngmq0ptww2bthpv7, .table th.tinytable_css_kprfngmq0ptww2bthpv7 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_nki5ebcb55jrn2vvnivx, .table th.tinytable_css_nki5ebcb55jrn2vvnivx { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_9ve8ro80tjjm0xg2kvip, .table th.tinytable_css_9ve8ro80tjjm0xg2kvip { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_cer53ln24cmeyhm78waj, .table th.tinytable_css_cer53ln24cmeyhm78waj { text-align: left; }
+      .table td.tinytable_css_rrp89ne67ha8ulpju4uf, .table th.tinytable_css_rrp89ne67ha8ulpju4uf { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_y7gfa0ycbn5np47i9726, .table th.tinytable_css_y7gfa0ycbn5np47i9726 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
 <div class="container">
-      <div class="inline-table"><table class="table table-borderless" id="tinytable_orer97shxw40p0zprv6l" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <div class="inline-table"><table class="table table-borderless" id="tinytable_jn8sl0w8umejbzwnbj54" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
 <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -705,7 +709,7 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
   <div class="col-12 col-md-6 mt-3">
     <p>"<strong><p><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</p></strong>" was written by </p>
-<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 07 August, 2025.
+<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 12 August, 2025.
   </div>
 
   <div class="col-12 col-md-6 mt-3">
