--- a/flashcards-5.html
+++ b/flashcards-5.html
@@ -109,12 +109,16 @@
 <li><a class="" href="homework-for-week-8.html">Homework for Week 8</a></li>
 <li><a class="" href="glossary-5.html">Glossary</a></li>
 <li><a class="active" href="flashcards-5.html">Flashcards</a></li>
+<li class="book-part">Markdown</li>
+<li><a class="" href="professional-writing-in-political-science.html">Professional Writing in Political Science</a></li>
+<li><a class="" href="introduction-to-markdown.html">Introduction to Markdown</a></li>
+<li><a class="" href="assessment-template.html">Assessment Template</a></li>
 <li class="book-part">Downloads</li>
 <li><a class="" href="downloads.html">Downloads</a></li>
 <li class="book-part">Glossary</li>
 <li><a class="" href="glossary-6.html">Glossary</a></li>
 <li class="book-part">List of References</li>
-<li><a class="" href="list-of-references.html">List of References</a></li>
+<li><a class="" href="list-of-references-1.html">List of References</a></li>
 </ul>
 
         <div class="book-extra">
@@ -188,7 +192,7 @@ The data are available as a <a href="files/excelfiles/PO33Q_Week%207_Consolidate
   });
 </script><div class="chapter-nav">
 <div class="prev"><a href="glossary-5.html">Glossary</a></div>
-<div class="next"><a href="downloads.html">Downloads</a></div>
+<div class="next"><a href="professional-writing-in-political-science.html">Professional Writing in Political Science</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
       <ul class="nav navbar-nav"><li><a class="nav-link" href="#flashcards-5">Flashcards</a></li></ul>
@@ -208,7 +212,7 @@ The data are available as a <a href="files/excelfiles/PO33Q_Week%207_Consolidate
 
   <div class="col-12 col-md-6 mt-3">
     <p>"<strong><p><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</p></strong>" was written by </p>
-<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 07 August, 2025.
+<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 12 August, 2025.
   </div>
 
   <div class="col-12 col-md-6 mt-3">
