--- a/homework-for-week-4.html
+++ b/homework-for-week-4.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 4 Students as Researchers: Prepare a short presentation (&lt; 3 mins.) on the research proposal to be...">
-<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 4 Students as Researchers: Prepare a short presentation (&lt; 3 mins.) on the research proposal to be...">
-<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 4 Students as Researchers: Prepare a short presentation (&lt; 3 mins.) on the research proposal to be...">
+<meta name="description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 4 Read through the Markdown section of the companion, so you can plan writing your (summative) assessment...">
+<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 4 Read through the Markdown section of the companion, so you can plan writing your (summative) assessment...">
+<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 4 Read through the Markdown section of the companion, so you can plan writing your (summative) assessment...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -109,12 +109,16 @@
 <li><a class="" href="homework-for-week-8.html">Homework for Week 8</a></li>
 <li><a class="" href="glossary-5.html">Glossary</a></li>
 <li><a class="" href="flashcards-5.html">Flashcards</a></li>
+<li class="book-part">Markdown</li>
+<li><a class="" href="professional-writing-in-political-science.html">Professional Writing in Political Science</a></li>
+<li><a class="" href="introduction-to-markdown.html">Introduction to Markdown</a></li>
+<li><a class="" href="assessment-template.html">Assessment Template</a></li>
 <li class="book-part">Downloads</li>
 <li><a class="" href="downloads.html">Downloads</a></li>
 <li class="book-part">Glossary</li>
 <li><a class="" href="glossary-6.html">Glossary</a></li>
 <li class="book-part">List of References</li>
-<li><a class="" href="list-of-references.html">List of References</a></li>
+<li><a class="" href="list-of-references-1.html">List of References</a></li>
 </ul>
 
         <div class="book-extra">
@@ -130,6 +134,7 @@
 <li>Finish this week’s worksheet</li>
 <li>Read the <a href="https://rl.talis.com/3/warwick/lists/E5FA4027-27A7-AFB0-AAF4-C891BCCD83E2.html#66C9B5CD-9980-CDF3-AF43-7A17CFA1856D">required literature for Week 4</a>
 </li>
+<li>Read through the <a href="https://drfloreiche.github.io/PO33Q/markdown.html">Markdown</a> section of the companion, so you can plan writing your (summative) assessment in R Markdown</li>
 </ul>
 <p><strong>Students as Researchers:</strong></p>
 <ul>
@@ -176,7 +181,7 @@
 
   <div class="col-12 col-md-6 mt-3">
     <p>"<strong><p><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</p></strong>" was written by </p>
-<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 07 August, 2025.
+<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 12 August, 2025.
   </div>
 
   <div class="col-12 col-md-6 mt-3">
