--- a/model-building.html
+++ b/model-building.html
@@ -109,12 +109,16 @@
 <li><a class="" href="homework-for-week-8.html">Homework for Week 8</a></li>
 <li><a class="" href="glossary-5.html">Glossary</a></li>
 <li><a class="" href="flashcards-5.html">Flashcards</a></li>
+<li class="book-part">Markdown</li>
+<li><a class="" href="professional-writing-in-political-science.html">Professional Writing in Political Science</a></li>
+<li><a class="" href="introduction-to-markdown.html">Introduction to Markdown</a></li>
+<li><a class="" href="assessment-template.html">Assessment Template</a></li>
 <li class="book-part">Downloads</li>
 <li><a class="" href="downloads.html">Downloads</a></li>
 <li class="book-part">Glossary</li>
 <li><a class="" href="glossary-6.html">Glossary</a></li>
 <li class="book-part">List of References</li>
-<li><a class="" href="list-of-references.html">List of References</a></li>
+<li><a class="" href="list-of-references-1.html">List of References</a></li>
 </ul>
 
         <div class="book-extra">
@@ -155,8 +159,8 @@
 
     <script>
 
-      function styleCell_ojqtm3scqq3gzt69fyfs(i, j, css_id) {
-          var table = document.getElementById("tinytable_ojqtm3scqq3gzt69fyfs");
+      function styleCell_iecqr9ny2gn3qxubyv3b(i, j, css_id) {
+          var table = document.getElementById("tinytable_iecqr9ny2gn3qxubyv3b");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -166,7 +170,7 @@
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_ojqtm3scqq3gzt69fyfs');
+        var table = document.getElementById('tinytable_iecqr9ny2gn3qxubyv3b');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -174,8 +178,8 @@
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_ojqtm3scqq3gzt69fyfs(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_ojqtm3scqq3gzt69fyfs");
+      function spanCell_iecqr9ny2gn3qxubyv3b(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_iecqr9ny2gn3qxubyv3b");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -205,38 +209,38 @@
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_fql1gx7pb3ltpaerpum5',}, 
-          { positions: [ { i: 7, j: 1 }, { i: 7, j: 2 }, { i: 7, j: 3 },  ], css_id: 'tinytable_css_wr3mxsnpcldia805mp79',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 5, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 2 }, { i: 5, j: 2 }, { i: 2, j: 2 }, { i: 3, j: 3 }, { i: 4, j: 1 }, { i: 5, j: 3 }, { i: 6, j: 2 }, { i: 4, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 6, j: 3 },  ], css_id: 'tinytable_css_fv3i439zpc9ilf8wiolh',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_9noffagv14y11g59vgf6',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_0xht5l4kshw6zu22y89o',}, 
-          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_8jn4rsmkchl9cyneftch',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 },  ], css_id: 'tinytable_css_2uwsw5i8q2nuws1rcvgv',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_z8xsjxeg5foa9nn17r0f',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_z343whfkpgqc2qbaa10s',}, 
+          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_07kphqre34c83k6n3iyz',}, 
+          { positions: [ { i: 7, j: 1 }, { i: 7, j: 2 }, { i: 7, j: 3 },  ], css_id: 'tinytable_css_qay1ynooh1qghlcd33mi',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 5, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 2 }, { i: 5, j: 2 }, { i: 2, j: 2 }, { i: 3, j: 3 }, { i: 4, j: 1 }, { i: 5, j: 3 }, { i: 6, j: 2 }, { i: 4, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 6, j: 3 },  ], css_id: 'tinytable_css_m3itkbpdr80xvv0lrscu',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_jo3cgrw22j4xe9jpt4c9',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_skmdyykbzlduxkf2r1ly',}, 
+          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_tvnl6hezu1plme6pkyz7',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 },  ], css_id: 'tinytable_css_6k2mntmmm5r17iwqt6br',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_ryu54yuaa6z6nkbe3ilx',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_189ar0cw98k1f5ziutzy',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_ojqtm3scqq3gzt69fyfs(cell.i, cell.j, group.css_id);
+                  styleCell_iecqr9ny2gn3qxubyv3b(cell.i, cell.j, group.css_id);
               });
           });
       });
     </script><style>
       /* tinytable css entries after */
-      .table td.tinytable_css_fql1gx7pb3ltpaerpum5, .table th.tinytable_css_fql1gx7pb3ltpaerpum5 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_wr3mxsnpcldia805mp79, .table th.tinytable_css_wr3mxsnpcldia805mp79 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_fv3i439zpc9ilf8wiolh, .table th.tinytable_css_fv3i439zpc9ilf8wiolh { text-align: center; }
-      .table td.tinytable_css_9noffagv14y11g59vgf6, .table th.tinytable_css_9noffagv14y11g59vgf6 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_0xht5l4kshw6zu22y89o, .table th.tinytable_css_0xht5l4kshw6zu22y89o { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_8jn4rsmkchl9cyneftch, .table th.tinytable_css_8jn4rsmkchl9cyneftch { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_2uwsw5i8q2nuws1rcvgv, .table th.tinytable_css_2uwsw5i8q2nuws1rcvgv { text-align: left; }
-      .table td.tinytable_css_z8xsjxeg5foa9nn17r0f, .table th.tinytable_css_z8xsjxeg5foa9nn17r0f { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_z343whfkpgqc2qbaa10s, .table th.tinytable_css_z343whfkpgqc2qbaa10s { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_07kphqre34c83k6n3iyz, .table th.tinytable_css_07kphqre34c83k6n3iyz { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_qay1ynooh1qghlcd33mi, .table th.tinytable_css_qay1ynooh1qghlcd33mi { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_m3itkbpdr80xvv0lrscu, .table th.tinytable_css_m3itkbpdr80xvv0lrscu { text-align: center; }
+      .table td.tinytable_css_jo3cgrw22j4xe9jpt4c9, .table th.tinytable_css_jo3cgrw22j4xe9jpt4c9 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_skmdyykbzlduxkf2r1ly, .table th.tinytable_css_skmdyykbzlduxkf2r1ly { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_tvnl6hezu1plme6pkyz7, .table th.tinytable_css_tvnl6hezu1plme6pkyz7 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_6k2mntmmm5r17iwqt6br, .table th.tinytable_css_6k2mntmmm5r17iwqt6br { text-align: left; }
+      .table td.tinytable_css_ryu54yuaa6z6nkbe3ilx, .table th.tinytable_css_ryu54yuaa6z6nkbe3ilx { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_189ar0cw98k1f5ziutzy, .table th.tinytable_css_189ar0cw98k1f5ziutzy { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
 <div class="container">
-      <div class="inline-table"><table class="table table-borderless" id="tinytable_ojqtm3scqq3gzt69fyfs" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <div class="inline-table"><table class="table table-borderless" id="tinytable_iecqr9ny2gn3qxubyv3b" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
 <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -360,7 +364,7 @@
 
   <div class="col-12 col-md-6 mt-3">
     <p>"<strong><p><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</p></strong>" was written by </p>
-<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 07 August, 2025.
+<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 12 August, 2025.
   </div>
 
   <div class="col-12 col-md-6 mt-3">
