--- a/model-fit-in-binary-response-models.html
+++ b/model-fit-in-binary-response-models.html
@@ -109,12 +109,16 @@
 <li><a class="" href="homework-for-week-8.html">Homework for Week 8</a></li>
 <li><a class="" href="glossary-5.html">Glossary</a></li>
 <li><a class="" href="flashcards-5.html">Flashcards</a></li>
+<li class="book-part">Markdown</li>
+<li><a class="" href="professional-writing-in-political-science.html">Professional Writing in Political Science</a></li>
+<li><a class="" href="introduction-to-markdown.html">Introduction to Markdown</a></li>
+<li><a class="" href="assessment-template.html">Assessment Template</a></li>
 <li class="book-part">Downloads</li>
 <li><a class="" href="downloads.html">Downloads</a></li>
 <li class="book-part">Glossary</li>
 <li><a class="" href="glossary-6.html">Glossary</a></li>
 <li class="book-part">List of References</li>
-<li><a class="" href="list-of-references.html">List of References</a></li>
+<li><a class="" href="list-of-references-1.html">List of References</a></li>
 </ul>
 
         <div class="book-extra">
@@ -992,8 +996,8 @@ Figure 37: ROC Curve
 
     <script>
 
-      function styleCell_1gyjpc30r0rwqnm4h0s2(i, j, css_id) {
-          var table = document.getElementById("tinytable_1gyjpc30r0rwqnm4h0s2");
+      function styleCell_nl1b7iadj4ynw4wbu29i(i, j, css_id) {
+          var table = document.getElementById("tinytable_nl1b7iadj4ynw4wbu29i");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1003,7 +1007,7 @@ Figure 37: ROC Curve
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_1gyjpc30r0rwqnm4h0s2');
+        var table = document.getElementById('tinytable_nl1b7iadj4ynw4wbu29i');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -1011,8 +1015,8 @@ Figure 37: ROC Curve
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_1gyjpc30r0rwqnm4h0s2(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_1gyjpc30r0rwqnm4h0s2");
+      function spanCell_nl1b7iadj4ynw4wbu29i(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_nl1b7iadj4ynw4wbu29i");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -1042,48 +1046,48 @@ Figure 37: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_b80eotisqv2zl6d1k4a6',}, 
-          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_lf3kepvtb67fv8248qkr',}, 
-          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_zuhvf32zpogcaqekakd9',}, 
-          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_4galam3m2eg48ch02f5x',}, 
-          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_1x0hvr6kb7wgn2i7rbp2',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_eoqix6wzbub6h86tnp7a',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_kwamwajactgl2pvbl1jr',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_7j2i8ge9p64c44x83v3i',}, 
-          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_6gxqgwk5sg685u8l8x8b',}, 
-          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_6ga53iy2jpc3mezt90b8',}, 
-          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_vav0qkgsfg4y5agosbtk',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_ku8qfahw53sori2tp2su',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_5hq1d7vo31bhxa4ruuul',}, 
-          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_ortf2cs1ghy5bf9iuld8',}, 
+          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_6nvty01nf763yliy34ji',}, 
+          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_9mznh3t22iff5acjpaej',}, 
+          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_ke19qf25ygl1hm2slgv8',}, 
+          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_gm59ktufan5v5aaotwkj',}, 
+          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_xzr7e5kimbblyxbalm7g',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_kzh29bgbiulmcfqot0a0',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_5n7g4okupbdvvoq4ekaq',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_9lcfk20nqg3je8buuey3',}, 
+          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_ut1h646bi7pl448c98yd',}, 
+          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_nlmhy2n5br76nz7qkkuu',}, 
+          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_vg7cjnccbv33au2p1our',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_0stfxk8asbq4pfy57czv',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_4zctxyh8uq2ju2k8hp02',}, 
+          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_p6nn0ask6ojdabqecwg5',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_1gyjpc30r0rwqnm4h0s2(cell.i, cell.j, group.css_id);
+                  styleCell_nl1b7iadj4ynw4wbu29i(cell.i, cell.j, group.css_id);
               });
           });
       });
     </script><style>
       /* tinytable css entries after */
-      .table td.tinytable_css_b80eotisqv2zl6d1k4a6, .table th.tinytable_css_b80eotisqv2zl6d1k4a6 { text-align: center; text-align: center; }
-      .table td.tinytable_css_lf3kepvtb67fv8248qkr, .table th.tinytable_css_lf3kepvtb67fv8248qkr { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_zuhvf32zpogcaqekakd9, .table th.tinytable_css_zuhvf32zpogcaqekakd9 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_4galam3m2eg48ch02f5x, .table th.tinytable_css_4galam3m2eg48ch02f5x { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_1x0hvr6kb7wgn2i7rbp2, .table th.tinytable_css_1x0hvr6kb7wgn2i7rbp2 { text-align: center; }
-      .table td.tinytable_css_eoqix6wzbub6h86tnp7a, .table th.tinytable_css_eoqix6wzbub6h86tnp7a { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_kwamwajactgl2pvbl1jr, .table th.tinytable_css_kwamwajactgl2pvbl1jr { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_7j2i8ge9p64c44x83v3i, .table th.tinytable_css_7j2i8ge9p64c44x83v3i { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_6gxqgwk5sg685u8l8x8b, .table th.tinytable_css_6gxqgwk5sg685u8l8x8b { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_6ga53iy2jpc3mezt90b8, .table th.tinytable_css_6ga53iy2jpc3mezt90b8 { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_vav0qkgsfg4y5agosbtk, .table th.tinytable_css_vav0qkgsfg4y5agosbtk { text-align: left; }
-      .table td.tinytable_css_ku8qfahw53sori2tp2su, .table th.tinytable_css_ku8qfahw53sori2tp2su { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_5hq1d7vo31bhxa4ruuul, .table th.tinytable_css_5hq1d7vo31bhxa4ruuul { text-align: left; text-align: center; }
-      .table td.tinytable_css_ortf2cs1ghy5bf9iuld8, .table th.tinytable_css_ortf2cs1ghy5bf9iuld8 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_6nvty01nf763yliy34ji, .table th.tinytable_css_6nvty01nf763yliy34ji { text-align: center; text-align: center; }
+      .table td.tinytable_css_9mznh3t22iff5acjpaej, .table th.tinytable_css_9mznh3t22iff5acjpaej { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_ke19qf25ygl1hm2slgv8, .table th.tinytable_css_ke19qf25ygl1hm2slgv8 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_gm59ktufan5v5aaotwkj, .table th.tinytable_css_gm59ktufan5v5aaotwkj { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_xzr7e5kimbblyxbalm7g, .table th.tinytable_css_xzr7e5kimbblyxbalm7g { text-align: center; }
+      .table td.tinytable_css_kzh29bgbiulmcfqot0a0, .table th.tinytable_css_kzh29bgbiulmcfqot0a0 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_5n7g4okupbdvvoq4ekaq, .table th.tinytable_css_5n7g4okupbdvvoq4ekaq { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_9lcfk20nqg3je8buuey3, .table th.tinytable_css_9lcfk20nqg3je8buuey3 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_ut1h646bi7pl448c98yd, .table th.tinytable_css_ut1h646bi7pl448c98yd { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_nlmhy2n5br76nz7qkkuu, .table th.tinytable_css_nlmhy2n5br76nz7qkkuu { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_vg7cjnccbv33au2p1our, .table th.tinytable_css_vg7cjnccbv33au2p1our { text-align: left; }
+      .table td.tinytable_css_0stfxk8asbq4pfy57czv, .table th.tinytable_css_0stfxk8asbq4pfy57czv { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_4zctxyh8uq2ju2k8hp02, .table th.tinytable_css_4zctxyh8uq2ju2k8hp02 { text-align: left; text-align: center; }
+      .table td.tinytable_css_p6nn0ask6ojdabqecwg5, .table th.tinytable_css_p6nn0ask6ojdabqecwg5 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
 <div class="container">
-      <div class="inline-table"><table class="table table-borderless" id="tinytable_1gyjpc30r0rwqnm4h0s2" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <div class="inline-table"><table class="table table-borderless" id="tinytable_nl1b7iadj4ynw4wbu29i" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
 <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -1325,7 +1329,7 @@ Full code you can adapt for the assessment
 
   <div class="col-12 col-md-6 mt-3">
     <p>"<strong><p><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</p></strong>" was written by </p>
-<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 07 August, 2025.
+<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 12 August, 2025.
   </div>
 
   <div class="col-12 col-md-6 mt-3">
