--- a/homework-for-week-4.html
+++ b/homework-for-week-4.html
@@ -134,7 +134,7 @@
 <li>Finish this week’s worksheet</li>
 <li>Read the <a href="https://rl.talis.com/3/warwick/lists/E5FA4027-27A7-AFB0-AAF4-C891BCCD83E2.html#66C9B5CD-9980-CDF3-AF43-7A17CFA1856D">required literature for Week 4</a>
 </li>
-<li>Read through the <a href="https://drfloreiche.github.io/PO33Q/markdown.html">Markdown</a> section of the companion, so you can plan writing your (summative) assessment in R Markdown</li>
+<li>Read through the <a href="https://drfloreiche.github.io/PO33Q/professional-writing-in-political-science.html">Markdown</a> section of the companion, so you can plan writing your (summative) assessment in R Markdown</li>
 </ul>
 <p><strong>Students as Researchers:</strong></p>
 <ul>
