--- a/introduction-to-markdown.html
+++ b/introduction-to-markdown.html
@@ -140,7 +140,7 @@
 </div>
 <p>So, what is R Markdown?</p>
 <blockquote>
-<p>R Markdown provides an unified authoring framework for data science, combining your code, its results, and your prose commentary. R Markdown documents are fully reproducible and support dozens of output formats, like PDFs, Word files, slideshows, and more.[^08-markdown-1]</p>
+<p>R Markdown provides an unified authoring framework for data science, combining your code, its results, and your prose commentary. R Markdown documents are fully reproducible and support dozens of output formats, like PDFs, Word files, slideshows, and more.<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content='&lt;p&gt;&lt;a href="https://r4ds.had.co.nz/r-markdown.html" class="uri"&gt;https://r4ds.had.co.nz/r-markdown.html&lt;/a&gt;&lt;/p&gt;'><sup>12</sup></a></p>
 </blockquote>
 <p>When we use Markdown in R, the document will have essentially three parts:</p>
 <ul>
@@ -311,6 +311,7 @@ see Przeworski et al. (2000, p. 20)
 </div>
 </div>
 </div>
+
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     const buttons = document.querySelectorAll(".delayed-download");
