--- a/introduction-to-markdown.html
+++ b/introduction-to-markdown.html
@@ -136,7 +136,8 @@
 <p>I agree. And I wish more people, students and faculty members alike, would take note of this. The good news for you is that we will be using R on this module, and amongst the many other millions of things that this program enables us to do, it provides an interface to write with Markdown.</p>
 <p>Writing your assessment in R Markdown has some very notable benefits, such as great formatting, the seamless integration of graphs and results tables you will produce for your assessment, and a semi-automatic list of references.</p>
 <div class="warning">
-<p>If you are already rather overwhelmed by the quantitative component of the module, then please leave this page now. I am NOT expecting you to write this assessment in R Markdown, and you will not be marked any differently for presentation if you decide to write this in MS Word. </p>
+<p>If you are already rather overwhelmed by the quantitative component of the module, then please leave this page now. I am NOT expecting you to write this assessment in R Markdown, and you will not be marked any differently for presentation if you decide to write this in MS Word.</p>
+<p>Please do have a look at the <a href="files/Markdown/PO33Q-Assessment-Template.pdf">Essay Template</a>, however, as it is a good benchmark for formatting your assessment wherever you write it. It also contains pointers as to what each section of the assessment should cover.</p>
 </div>
 <p>So, what is R Markdown?</p>
 <blockquote>
@@ -153,7 +154,7 @@
 <div id="yaml" class="section level3 unnumbered">
 <h3>YAML<a class="anchor" aria-label="anchor" href="#yaml"><i class="fas fa-link"></i></a>
 </h3>
-<p>YAML is an acronym for “Yet Another Markup Language”. This section of the document contains the settings for the entire document, such as the title, information about the bibliography (see below), and additional packages we might need to load. To make you life a little easier, I will provide you with a template for the assessment further below.</p>
+<p>YAML is an acronym for “Yet Another Markup Language”. This section of the document contains the settings for the entire document, such as the title, information about the bibliography (see below), and additional packages we might need to load. To make your life a little easier, I will provide you with a template for the assessment further below.</p>
 </div>
 <div id="text" class="section level3 unnumbered">
 <h3>Text<a class="anchor" aria-label="anchor" href="#text"><i class="fas fa-link"></i></a>
