--- a/introduction-to-markdown.html
+++ b/introduction-to-markdown.html
@@ -135,9 +135,15 @@
 </blockquote>
 <p>I agree. And I wish more people, students and faculty members alike, would take note of this. The good news for you is that we will be using R on this module, and amongst the many other millions of things that this program enables us to do, it provides an interface to write with Markdown.</p>
 <p>Writing your assessment in R Markdown has some very notable benefits, such as great formatting, the seamless integration of graphs and results tables you will produce for your assessment, and a semi-automatic list of references.</p>
+<div style="height:1em;">
+
+</div>
 <div class="warning">
 <p>If you are already rather overwhelmed by the quantitative component of the module, then please leave this page now. I am NOT expecting you to write this assessment in R Markdown, and you will not be marked any differently for presentation if you decide to write this in MS Word.</p>
 <p>Please do have a look at the <a href="files/Markdown/PO33Q-Assessment-Template.pdf">Essay Template</a>, however, as it is a good benchmark for formatting your assessment wherever you write it. It also contains pointers as to what each section of the assessment should cover.</p>
+</div>
+<div style="height:1em;">
+
 </div>
 <p>So, what is R Markdown?</p>
 <blockquote>
@@ -151,7 +157,13 @@
 </ul>
 <p>I will go through these in turn now. To follow along, I recommend you download the <a href="files/Markdown/PO33Q%20Assessment%20Template.Rmd">Assessment Template</a> in which all of the below is already implemented. Don’t do anything with it, yet. But whilst you are reading what I am discussing here, try to match it to what you see in the Rmd file.</p>
 <p>Once you open the essay template in R Studio, you will obtain a few more options in the task bar at the top which will allow you to turn this raw file into a pdf. More on this below, under “Knitting”.</p>
+<div style="height:1em;">
+
+</div>
 <div class="inline-figure"><img src="files/Markdown/visual.png" width="60%"></div>
+<div style="height:1em;">
+
+</div>
 <p>It is possible that R will ask you to install the <code>markdown</code> package. Please do so, and also allow the installation of any dependencies if prompted.</p>
 <div id="yaml" class="section level3 unnumbered">
 <h3>YAML<a class="anchor" aria-label="anchor" href="#yaml"><i class="fas fa-link"></i></a>
@@ -162,11 +174,24 @@
 <h3>Text<a class="anchor" aria-label="anchor" href="#text"><i class="fas fa-link"></i></a>
 </h3>
 <p>Then, in line 71, follows the text which you can basically type as you always would. In order to use the familiar text formatting icons to set text as a heading, or in bold, change the font size, etc. you can switch the R Markdown editor to “Visual” at the top. By default, this is set to “Source” where markdown would expect code to achieve all of these formatting operations.</p>
+<div style="height:1em;">
+
+</div>
 <div class="inline-figure"><img src="files/Markdown/visual1.png" width="60%"></div>
+<div style="height:1em;">
+
+</div>
 <p>Once you activate it, this task bar will appear at the top of the Rmd file:</p>
+<div style="height:1em;">
+
+</div>
 <div class="inline-figure"><img src="files/Markdown/wysiwyg.png" width="90%"></div>
+<div style="height:1em;">
+
+</div>
 <div class="warning">
 <p>When you structure your document, it is essential that you format headings as such in the document and don’t just make the font larger. Otherwise, the automated table of contents will not work.</p>
+<div class="inline-figure"><img src="files/Markdown/headings.png" alt="Warwick logo" style="width:35%; height:auto;"></div>
 </div>
 <p>The visual editing bar will also allow you to include external pictures (external in the sense that you are not creating them in R whilst creating the document). For this purpose, click on the image icon in the visual editing bar, and a new window will pop up. Under the tab “Image” you can select the image from a file in your computer. Be sure to add a caption in this tab, as well. This will be printed underneath the image in your pdf. Then click the tab “Attributes”, and in the box “ID” enter a unique identifier for the image you are inserting. I usually use “fig” for figure, a colon, and then the name of the figure:</p>
 <div class="inline-figure"><img src="files/Markdown/labelpic.png" width="40%"></div>
