--- a/missing-data.html
+++ b/missing-data.html
@@ -157,6 +157,9 @@
 <p> </p>
 <div class="custom-html-table">
 <div class="inline-table"><table style="border-collapse: collapse; font-size: 90%; padding: 0; margin: 1em auto; width: 60%;" class="table table-sm">
+<caption>
+<span id="tab:ideal">Table 7: </span> An Ideal World
+</caption>
 <thead><tr>
 <th style="padding: 0.2em; text-align: center;">
 <strong>var1</strong>
@@ -306,6 +309,9 @@ x
 <p> </p>
 <div class="custom-html-table">
 <div class="inline-table"><table style="border-collapse: collapse; font-size: 90%; padding: 0; margin: 1em auto; width: 60%;" class="table table-sm">
+<caption>
+<span id="tab:real">Table 8: </span> The Real World
+</caption>
 <thead><tr>
 <th style="padding: 0.2em; text-align: center;">
 <strong>var1</strong>
@@ -450,10 +456,13 @@ x
 Figure 31: Excerpt from the <code>world</code> data set
 </p>
 </div>
-<p>If you ran a regression model that uses the variable <code>agri</code>, listwise deletion would delete all observations and you would end up with no model. Here, the amount of observations you would lose is obvious. But since different variables have missing values in different places, it is often not as obvious as that. Assume, for example that we wished to use all four variables in our Schematic in Figure <a href="#fig:real"><strong>??</strong></a>. Even though the “missingness” problem looks much less pronounced than in the <code>agri</code> variable in the <code>world</code> data set (see Figure <a href="missing-data.html#fig:missing">31</a>, listwise deletion would ensure that we would only be left with two observations out of ten in our model:</p>
+<p>If you ran a regression model that uses the variable <code>agri</code>, listwise deletion would delete all observations and you would end up with no model. Here, the amount of observations you would lose is obvious. But since different variables have missing values in different places, it is often not as obvious as that. Assume, for example that we wished to use all four variables in our Schematic in Table <a href="missing-data.html#tab:real">8</a>. Even though the “missingness” problem looks much less pronounced than in the <code>agri</code> variable in the <code>world</code> data set (see Figure <a href="missing-data.html#fig:missing">31</a>, listwise deletion would ensure that we would only be left with two observations out of ten in our model:</p>
 <p> </p>
 <div class="custom-html-table">
 <div class="inline-table"><table style="border-collapse: collapse; font-size: 90%; padding: 0; margin: 1em auto; width: 60%;" class="table table-sm">
+<caption>
+<span id="tab:left">Table 9: </span> What is left…
+</caption>
 <thead><tr>
 <th style="padding: 0.2em; text-align: center;">
 <strong>var1</strong>
