--- a/introduction-to-markdown.html
+++ b/introduction-to-markdown.html
@@ -173,7 +173,7 @@
 <div id="text" class="section level3 unnumbered">
 <h3>Text<a class="anchor" aria-label="anchor" href="#text"><i class="fas fa-link"></i></a>
 </h3>
-<p>Then, in line 71, follows the text which you can basically type as you always would. In order to use the familiar text formatting icons to set text as a heading, or in bold, change the font size, etc. you can switch the R Markdown editor to “Visual” at the top. By default, this is set to “Source” where markdown would expect code to achieve all of these formatting operations.</p>
+<p>Then, in line 71, follows the text which you can basically type as you always would. In order to use the familiar text formatting icons that turn text into headings, or into bold, change the font size, etc. you can switch the R Markdown editor to “Visual” at the top. By default, this is set to “Source” where markdown would expect code to achieve all of these formatting operations.</p>
 <div style="height:1em;">
 
 </div>
