--- a/assessment-template.html
+++ b/assessment-template.html
@@ -139,7 +139,13 @@
 <a href="files/Markdown/referencesPO33Q.bib">referencesPO33Q.bib</a> which contains all entries for the complete <a href="files/Downloads/PO33Q_Bibliography.pdf">bibliography</a> of the module.</li>
 </ul>
 <p>Render / knit this document without making any changes to ensure this works. It should look like <a href="files/Markdown/PO33Q-Assessment-Template.pdf">this</a>. Then you can start writing your assessment. Again, render/knit the document often, so that you can locate a potential mistake more easily should you receive an error message.</p>
+<div id="assessment-submission" class="section level2 unnumbered">
+<h2>Assessment Submission<a class="anchor" aria-label="anchor" href="#assessment-submission"><i class="fas fa-link"></i></a>
+</h2>
+<p>When it comes to submitting your assessment, please only submit the rendered pdf, and NOT the Rmd file. This will not be accepted by Tabula. If you wish to use Markdown on modules other than those taught by me, then please consult the module director whether they are happy to accept submissions in pdf format.</p>
+<p>Please ensure that you have copied and pasted your complete RScript into the Appendix section of the template. By complete I mean a script that takes you (or anybody else) from loading the original data sets I provide to the output you include in the report you submit on Tabula. The script should be properly annotated to make your work reproducible and easy to follow.</p>
 
+</div>
 </div>
 
 
@@ -166,7 +172,10 @@
 <div class="next"><a href="downloads.html">Downloads</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
-      <ul class="nav navbar-nav"><li><a class="nav-link" href="#assessment-template">Assessment Template</a></li></ul>
+      <ul class="nav navbar-nav">
+<li><a class="nav-link" href="#assessment-template">Assessment Template</a></li>
+<li><a class="nav-link" href="#assessment-submission">Assessment Submission</a></li>
+</ul>
 
       <div class="book-extra">
         <ul class="list-unstyled">
