--- a/introduction-to-markdown.html
+++ b/introduction-to-markdown.html
@@ -223,7 +223,7 @@ modelsummary()
 
 ```
 </code></pre>
-<p>It is important that none of the code in this mini-script produces any visible output (everything needs to be carried out quietly and would not produce output in the console if executed from an R Script), as these results will otherwise appear int he final document.</p>
+<p>It is important that none of the code in this mini-script produces any visible output (everything needs to be carried out quietly and would not produce output in the console if executed from an R Script), as these results will otherwise appear in the final document. Almost needless to say: the data set you are analysing will also have to be present in the same folder as the Rmd file<a class="footnote-ref" tabindex="0" data-toggle="popover" data-content="&lt;p&gt;You can create absolute and relative file paths to other locations, but let’s not over-complicate things here.&lt;/p&gt;"><sup>13</sup></a>.</p>
 <div class="bulb">
 <p>As a first step, use a regular RScript to carry out the analysis, as you can execute commands, and play around with this more easily (rather than knitting the entire thing every time).</p>
 <p>Once you are happy with the output, create the chunk in the .Rmd file and copy/paste your code.</p>
