--- a/homework-for-week-7.html
+++ b/homework-for-week-7.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Students as Learners: Finish this week’s worksheet Use reading week to catch up on the readings of Weeks 1-5 Read the required literature for Week 7 Students as Researchers: Revise the content of...">
-<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Use reading week to catch up on the readings of Weeks 1-5 Read the required literature for Week 7 Students as Researchers: Revise the content of...">
-<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Use reading week to catch up on the readings of Weeks 1-5 Read the required literature for Week 7 Students as Researchers: Revise the content of...">
+<meta name="description" content="Students as Learners: Finish this week’s worksheet Use reading week to catch up on the readings of Weeks 1-5 Read the required literature for Week 7   Students as Researchers: Revise the content...">
+<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Use reading week to catch up on the readings of Weeks 1-5 Read the required literature for Week 7   Students as Researchers: Revise the content...">
+<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Use reading week to catch up on the readings of Weeks 1-5 Read the required literature for Week 7   Students as Researchers: Revise the content...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -71,11 +71,13 @@
 <li><a class="" href="website-features.html">Website Features</a></li>
 <li><a class="" href="accessibility.html">Accessibility</a></li>
 <li class="book-part">Week 1</li>
+<li><a class="" href="road-map-for-today.html">Road Map for Today</a></li>
 <li><a class="" href="introduction-to-r.html">Introduction to R</a></li>
 <li><a class="" href="homework-for-week-2.html">Homework for Week 2</a></li>
 <li><a class="" href="glossary.html">Glossary</a></li>
 <li><a class="" href="flashcards.html">Flashcards</a></li>
 <li class="book-part">Week 2</li>
+<li><a class="" href="road-map-for-today-1.html">Road Map for Today</a></li>
 <li><a class="" href="principles-of-statistical-inference.html">Principles of Statistical Inference</a></li>
 <li><a class="" href="linear-regression---theory.html">Linear Regression - Theory</a></li>
 <li><a class="" href="linear-regression-application.html">Linear Regression – Application</a></li>
@@ -83,6 +85,7 @@
 <li><a class="" href="glossary-1.html">Glossary</a></li>
 <li><a class="" href="flashcards-1.html">Flashcards</a></li>
 <li class="book-part">Week 3</li>
+<li><a class="" href="road-map-for-today-2.html">Road Map for Today</a></li>
 <li><a class="" href="probit---theory.html">Probit - Theory</a></li>
 <li><a class="" href="probit-application.html">Probit – Application</a></li>
 <li><a class="" href="exercises.html">Exercises</a></li>
@@ -90,18 +93,21 @@
 <li><a class="" href="glossary-2.html">Glossary</a></li>
 <li><a class="" href="flashcards-2.html">Flashcards</a></li>
 <li class="book-part">Week 4</li>
+<li><a class="" href="road-map-for-today-3.html">Road Map for Today</a></li>
 <li><a class="" href="missing-data.html">Missing Data</a></li>
 <li><a class="" href="model-building.html">Model Building</a></li>
 <li><a class="" href="homework-for-week-5.html">Homework for Week 5</a></li>
 <li><a class="" href="glossary-3.html">Glossary</a></li>
 <li><a class="" href="flashcards-3.html">Flashcards</a></li>
 <li class="book-part">Week 5</li>
+<li><a class="" href="road-map-for-today-4.html">Road Map for Today</a></li>
 <li><a class="" href="consolidation.html">Consolidation</a></li>
 <li><a class="" href="exercises-1.html">Exercises</a></li>
 <li><a class="active" href="homework-for-week-7.html">Homework for Week 7</a></li>
 <li><a class="" href="glossary-4.html">Glossary</a></li>
 <li><a class="" href="flashcards-4.html">Flashcards</a></li>
 <li class="book-part">Week 7</li>
+<li><a class="" href="road-map-for-today-5.html">Road Map for Today</a></li>
 <li><a class="" href="markov-transition-models.html">Markov Transition Models</a></li>
 <li><a class="" href="model-fit-in-binary-response-models.html">Model Fit in Binary Response Models9</a></li>
 <li><a class="" href="joint-estimation-of-emergence-and-survival.html">Joint Estimation of Emergence and Survival</a></li>
@@ -109,6 +115,14 @@
 <li><a class="" href="homework-for-week-8.html">Homework for Week 8</a></li>
 <li><a class="" href="glossary-5.html">Glossary</a></li>
 <li><a class="" href="flashcards-5.html">Flashcards</a></li>
+<li class="book-part">Week 8</li>
+<li><a class="" href="road-map-for-today-6.html">Road Map for Today</a></li>
+<li><a class="" href="homework-for-week-9.html">Homework for Week 9</a></li>
+<li class="book-part">Week 9</li>
+<li><a class="" href="road-map-for-today-7.html">Road Map for Today</a></li>
+<li><a class="" href="homework-for-week-10.html">Homework for Week 10</a></li>
+<li class="book-part">Week 10</li>
+<li><a class="" href="road-map-for-today-8.html">Road Map for Today</a></li>
 <li class="book-part">Markdown</li>
 <li><a class="" href="professional-writing-in-political-science.html">Professional Writing in Political Science</a></li>
 <li><a class="" href="introduction-to-markdown.html">Introduction to Markdown</a></li>
@@ -136,6 +150,9 @@
 <li>Read the <a href="https://rl.talis.com/3/warwick/lists/E5FA4027-27A7-AFB0-AAF4-C891BCCD83E2.html#7C08DA63-F6CA-B2FC-4CB1-CA82B4182F36">required literature for Week 7</a>
 </li>
 </ul>
+<div style="height:1.5em;">
+
+</div>
 <p><strong>Students as Researchers:</strong></p>
 <ul>
 <li>Revise the content of the seminar companion
@@ -186,7 +203,7 @@
 
   <div class="col-12 col-md-6 mt-3">
     <p>"<strong><p><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</p></strong>" was written by </p>
-<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 12 August, 2025.
+<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 13 August, 2025.
   </div>
 
   <div class="col-12 col-md-6 mt-3">
