--- a/model-building.html
+++ b/model-building.html
@@ -71,11 +71,13 @@
 <li><a class="" href="website-features.html">Website Features</a></li>
 <li><a class="" href="accessibility.html">Accessibility</a></li>
 <li class="book-part">Week 1</li>
+<li><a class="" href="road-map-for-today.html">Road Map for Today</a></li>
 <li><a class="" href="introduction-to-r.html">Introduction to R</a></li>
 <li><a class="" href="homework-for-week-2.html">Homework for Week 2</a></li>
 <li><a class="" href="glossary.html">Glossary</a></li>
 <li><a class="" href="flashcards.html">Flashcards</a></li>
 <li class="book-part">Week 2</li>
+<li><a class="" href="road-map-for-today-1.html">Road Map for Today</a></li>
 <li><a class="" href="principles-of-statistical-inference.html">Principles of Statistical Inference</a></li>
 <li><a class="" href="linear-regression---theory.html">Linear Regression - Theory</a></li>
 <li><a class="" href="linear-regression-application.html">Linear Regression – Application</a></li>
@@ -83,6 +85,7 @@
 <li><a class="" href="glossary-1.html">Glossary</a></li>
 <li><a class="" href="flashcards-1.html">Flashcards</a></li>
 <li class="book-part">Week 3</li>
+<li><a class="" href="road-map-for-today-2.html">Road Map for Today</a></li>
 <li><a class="" href="probit---theory.html">Probit - Theory</a></li>
 <li><a class="" href="probit-application.html">Probit – Application</a></li>
 <li><a class="" href="exercises.html">Exercises</a></li>
@@ -90,18 +93,21 @@
 <li><a class="" href="glossary-2.html">Glossary</a></li>
 <li><a class="" href="flashcards-2.html">Flashcards</a></li>
 <li class="book-part">Week 4</li>
+<li><a class="" href="road-map-for-today-3.html">Road Map for Today</a></li>
 <li><a class="" href="missing-data.html">Missing Data</a></li>
 <li><a class="active" href="model-building.html">Model Building</a></li>
 <li><a class="" href="homework-for-week-5.html">Homework for Week 5</a></li>
 <li><a class="" href="glossary-3.html">Glossary</a></li>
 <li><a class="" href="flashcards-3.html">Flashcards</a></li>
 <li class="book-part">Week 5</li>
+<li><a class="" href="road-map-for-today-4.html">Road Map for Today</a></li>
 <li><a class="" href="consolidation.html">Consolidation</a></li>
 <li><a class="" href="exercises-1.html">Exercises</a></li>
 <li><a class="" href="homework-for-week-7.html">Homework for Week 7</a></li>
 <li><a class="" href="glossary-4.html">Glossary</a></li>
 <li><a class="" href="flashcards-4.html">Flashcards</a></li>
 <li class="book-part">Week 7</li>
+<li><a class="" href="road-map-for-today-5.html">Road Map for Today</a></li>
 <li><a class="" href="markov-transition-models.html">Markov Transition Models</a></li>
 <li><a class="" href="model-fit-in-binary-response-models.html">Model Fit in Binary Response Models9</a></li>
 <li><a class="" href="joint-estimation-of-emergence-and-survival.html">Joint Estimation of Emergence and Survival</a></li>
@@ -109,6 +115,14 @@
 <li><a class="" href="homework-for-week-8.html">Homework for Week 8</a></li>
 <li><a class="" href="glossary-5.html">Glossary</a></li>
 <li><a class="" href="flashcards-5.html">Flashcards</a></li>
+<li class="book-part">Week 8</li>
+<li><a class="" href="road-map-for-today-6.html">Road Map for Today</a></li>
+<li><a class="" href="homework-for-week-9.html">Homework for Week 9</a></li>
+<li class="book-part">Week 9</li>
+<li><a class="" href="road-map-for-today-7.html">Road Map for Today</a></li>
+<li><a class="" href="homework-for-week-10.html">Homework for Week 10</a></li>
+<li class="book-part">Week 10</li>
+<li><a class="" href="road-map-for-today-8.html">Road Map for Today</a></li>
 <li class="book-part">Markdown</li>
 <li><a class="" href="professional-writing-in-political-science.html">Professional Writing in Political Science</a></li>
 <li><a class="" href="introduction-to-markdown.html">Introduction to Markdown</a></li>
@@ -159,8 +173,8 @@
 
     <script>
 
-      function styleCell_rq12z29xqhebw8s3e47r(i, j, css_id) {
-          var table = document.getElementById("tinytable_rq12z29xqhebw8s3e47r");
+      function styleCell_o4iwzmpmh5869azhp30o(i, j, css_id) {
+          var table = document.getElementById("tinytable_o4iwzmpmh5869azhp30o");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -170,7 +184,7 @@
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_rq12z29xqhebw8s3e47r');
+        var table = document.getElementById('tinytable_o4iwzmpmh5869azhp30o');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -178,8 +192,8 @@
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_rq12z29xqhebw8s3e47r(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_rq12z29xqhebw8s3e47r");
+      function spanCell_o4iwzmpmh5869azhp30o(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_o4iwzmpmh5869azhp30o");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -209,38 +223,38 @@
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_h06q6bjylvejnb913exn',}, 
-          { positions: [ { i: 7, j: 1 }, { i: 7, j: 2 }, { i: 7, j: 3 },  ], css_id: 'tinytable_css_uu9t1njjqx6ooxuptdwa',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 5, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 2 }, { i: 5, j: 2 }, { i: 2, j: 2 }, { i: 3, j: 3 }, { i: 4, j: 1 }, { i: 5, j: 3 }, { i: 6, j: 2 }, { i: 4, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 6, j: 3 },  ], css_id: 'tinytable_css_8thi6a5c3u7rxc9y5ev3',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_mnuiquczkzr2dzb1aom3',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_0nd38ubv0mkmkwoqs8ut',}, 
-          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_9657n9qj80qj8hxlec1x',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 },  ], css_id: 'tinytable_css_n1ddbi03pnx6rwlru2bi',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_7chiqcrre2u9r8u7i66p',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_s1boo898b30yvcv4gurq',}, 
+          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_4izcnrqzwav42oucq5da',}, 
+          { positions: [ { i: 7, j: 1 }, { i: 7, j: 2 }, { i: 7, j: 3 },  ], css_id: 'tinytable_css_hr28cv2p5o9gfa7f6dx4',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 5, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 2 }, { i: 5, j: 2 }, { i: 2, j: 2 }, { i: 3, j: 3 }, { i: 4, j: 1 }, { i: 5, j: 3 }, { i: 6, j: 2 }, { i: 4, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 6, j: 3 },  ], css_id: 'tinytable_css_w09bucywlqokfll8v4c5',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_pdsm9cm19n7l47c6w4lx',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_4x6axru6wpf2e2j1xv1z',}, 
+          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_lfx2hs8havlzt1fiaacf',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 },  ], css_id: 'tinytable_css_knomjgpofnjfsxwkz4yz',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_ut8nu1gwotycxz0mztkn',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_sci5m97cba98g2vtzevb',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_rq12z29xqhebw8s3e47r(cell.i, cell.j, group.css_id);
+                  styleCell_o4iwzmpmh5869azhp30o(cell.i, cell.j, group.css_id);
               });
           });
       });
     </script><style>
       /* tinytable css entries after */
-      .table td.tinytable_css_h06q6bjylvejnb913exn, .table th.tinytable_css_h06q6bjylvejnb913exn { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_uu9t1njjqx6ooxuptdwa, .table th.tinytable_css_uu9t1njjqx6ooxuptdwa { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_8thi6a5c3u7rxc9y5ev3, .table th.tinytable_css_8thi6a5c3u7rxc9y5ev3 { text-align: center; }
-      .table td.tinytable_css_mnuiquczkzr2dzb1aom3, .table th.tinytable_css_mnuiquczkzr2dzb1aom3 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_0nd38ubv0mkmkwoqs8ut, .table th.tinytable_css_0nd38ubv0mkmkwoqs8ut { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_9657n9qj80qj8hxlec1x, .table th.tinytable_css_9657n9qj80qj8hxlec1x { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_n1ddbi03pnx6rwlru2bi, .table th.tinytable_css_n1ddbi03pnx6rwlru2bi { text-align: left; }
-      .table td.tinytable_css_7chiqcrre2u9r8u7i66p, .table th.tinytable_css_7chiqcrre2u9r8u7i66p { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_s1boo898b30yvcv4gurq, .table th.tinytable_css_s1boo898b30yvcv4gurq { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_4izcnrqzwav42oucq5da, .table th.tinytable_css_4izcnrqzwav42oucq5da { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_hr28cv2p5o9gfa7f6dx4, .table th.tinytable_css_hr28cv2p5o9gfa7f6dx4 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_w09bucywlqokfll8v4c5, .table th.tinytable_css_w09bucywlqokfll8v4c5 { text-align: center; }
+      .table td.tinytable_css_pdsm9cm19n7l47c6w4lx, .table th.tinytable_css_pdsm9cm19n7l47c6w4lx { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_4x6axru6wpf2e2j1xv1z, .table th.tinytable_css_4x6axru6wpf2e2j1xv1z { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_lfx2hs8havlzt1fiaacf, .table th.tinytable_css_lfx2hs8havlzt1fiaacf { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_knomjgpofnjfsxwkz4yz, .table th.tinytable_css_knomjgpofnjfsxwkz4yz { text-align: left; }
+      .table td.tinytable_css_ut8nu1gwotycxz0mztkn, .table th.tinytable_css_ut8nu1gwotycxz0mztkn { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_sci5m97cba98g2vtzevb, .table th.tinytable_css_sci5m97cba98g2vtzevb { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
 <div class="container">
-      <div class="inline-table"><table class="table table-borderless" id="tinytable_rq12z29xqhebw8s3e47r" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <div class="inline-table"><table class="table table-borderless" id="tinytable_o4iwzmpmh5869azhp30o" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
 <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -364,7 +378,7 @@
 
   <div class="col-12 col-md-6 mt-3">
     <p>"<strong><p><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</p></strong>" was written by </p>
-<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 12 August, 2025.
+<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 13 August, 2025.
   </div>
 
   <div class="col-12 col-md-6 mt-3">
