--- a/model-fit-in-binary-response-models.html
+++ b/model-fit-in-binary-response-models.html
@@ -71,11 +71,13 @@
 <li><a class="" href="website-features.html">Website Features</a></li>
 <li><a class="" href="accessibility.html">Accessibility</a></li>
 <li class="book-part">Week 1</li>
+<li><a class="" href="road-map-for-today.html">Road Map for Today</a></li>
 <li><a class="" href="introduction-to-r.html">Introduction to R</a></li>
 <li><a class="" href="homework-for-week-2.html">Homework for Week 2</a></li>
 <li><a class="" href="glossary.html">Glossary</a></li>
 <li><a class="" href="flashcards.html">Flashcards</a></li>
 <li class="book-part">Week 2</li>
+<li><a class="" href="road-map-for-today-1.html">Road Map for Today</a></li>
 <li><a class="" href="principles-of-statistical-inference.html">Principles of Statistical Inference</a></li>
 <li><a class="" href="linear-regression---theory.html">Linear Regression - Theory</a></li>
 <li><a class="" href="linear-regression-application.html">Linear Regression – Application</a></li>
@@ -83,6 +85,7 @@
 <li><a class="" href="glossary-1.html">Glossary</a></li>
 <li><a class="" href="flashcards-1.html">Flashcards</a></li>
 <li class="book-part">Week 3</li>
+<li><a class="" href="road-map-for-today-2.html">Road Map for Today</a></li>
 <li><a class="" href="probit---theory.html">Probit - Theory</a></li>
 <li><a class="" href="probit-application.html">Probit – Application</a></li>
 <li><a class="" href="exercises.html">Exercises</a></li>
@@ -90,18 +93,21 @@
 <li><a class="" href="glossary-2.html">Glossary</a></li>
 <li><a class="" href="flashcards-2.html">Flashcards</a></li>
 <li class="book-part">Week 4</li>
+<li><a class="" href="road-map-for-today-3.html">Road Map for Today</a></li>
 <li><a class="" href="missing-data.html">Missing Data</a></li>
 <li><a class="" href="model-building.html">Model Building</a></li>
 <li><a class="" href="homework-for-week-5.html">Homework for Week 5</a></li>
 <li><a class="" href="glossary-3.html">Glossary</a></li>
 <li><a class="" href="flashcards-3.html">Flashcards</a></li>
 <li class="book-part">Week 5</li>
+<li><a class="" href="road-map-for-today-4.html">Road Map for Today</a></li>
 <li><a class="" href="consolidation.html">Consolidation</a></li>
 <li><a class="" href="exercises-1.html">Exercises</a></li>
 <li><a class="" href="homework-for-week-7.html">Homework for Week 7</a></li>
 <li><a class="" href="glossary-4.html">Glossary</a></li>
 <li><a class="" href="flashcards-4.html">Flashcards</a></li>
 <li class="book-part">Week 7</li>
+<li><a class="" href="road-map-for-today-5.html">Road Map for Today</a></li>
 <li><a class="" href="markov-transition-models.html">Markov Transition Models</a></li>
 <li><a class="active" href="model-fit-in-binary-response-models.html">Model Fit in Binary Response Models9</a></li>
 <li><a class="" href="joint-estimation-of-emergence-and-survival.html">Joint Estimation of Emergence and Survival</a></li>
@@ -109,6 +115,14 @@
 <li><a class="" href="homework-for-week-8.html">Homework for Week 8</a></li>
 <li><a class="" href="glossary-5.html">Glossary</a></li>
 <li><a class="" href="flashcards-5.html">Flashcards</a></li>
+<li class="book-part">Week 8</li>
+<li><a class="" href="road-map-for-today-6.html">Road Map for Today</a></li>
+<li><a class="" href="homework-for-week-9.html">Homework for Week 9</a></li>
+<li class="book-part">Week 9</li>
+<li><a class="" href="road-map-for-today-7.html">Road Map for Today</a></li>
+<li><a class="" href="homework-for-week-10.html">Homework for Week 10</a></li>
+<li class="book-part">Week 10</li>
+<li><a class="" href="road-map-for-today-8.html">Road Map for Today</a></li>
 <li class="book-part">Markdown</li>
 <li><a class="" href="professional-writing-in-political-science.html">Professional Writing in Political Science</a></li>
 <li><a class="" href="introduction-to-markdown.html">Introduction to Markdown</a></li>
@@ -996,8 +1010,8 @@ Figure 37: ROC Curve
 
     <script>
 
-      function styleCell_ajetdprw2lzs4aj37s2b(i, j, css_id) {
-          var table = document.getElementById("tinytable_ajetdprw2lzs4aj37s2b");
+      function styleCell_2yzcck3d3ybqdbmxuwmm(i, j, css_id) {
+          var table = document.getElementById("tinytable_2yzcck3d3ybqdbmxuwmm");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1007,7 +1021,7 @@ Figure 37: ROC Curve
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_ajetdprw2lzs4aj37s2b');
+        var table = document.getElementById('tinytable_2yzcck3d3ybqdbmxuwmm');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -1015,8 +1029,8 @@ Figure 37: ROC Curve
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_ajetdprw2lzs4aj37s2b(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_ajetdprw2lzs4aj37s2b");
+      function spanCell_2yzcck3d3ybqdbmxuwmm(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_2yzcck3d3ybqdbmxuwmm");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -1046,48 +1060,48 @@ Figure 37: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_k58lmksn4fe6x7ezhz2o',}, 
-          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_3z59wy1kjzh2csvandkh',}, 
-          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_61ud8b3qhex85ul64ix4',}, 
-          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_yixxb21q8juxgafopndk',}, 
-          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_fg3p1ozz7q6mpl1yzb1f',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_myp1drfqmtmqoy79f4p3',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_qt9ab6fqcj1uyrr0ujgf',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_cz57v9llmeemxq9wz5hy',}, 
-          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_wubkd8g1e1glegdv12gu',}, 
-          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_ywdgluloplfre5cyf4u1',}, 
-          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_5k4wbyqehrtjjbpu7rt6',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_nkh7uidr7wwyjvk7c011',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_rtc7nma2hbhpwf6lm8op',}, 
-          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_ul5chmy0ohjdxtnvf2r9',}, 
+          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_duzwi7idkf993yciscwz',}, 
+          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_9h5vo5vnt5jmpwhxugke',}, 
+          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_8w8123yjcvmgnqipdz3k',}, 
+          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_k75u2qkpnysjlawkta9d',}, 
+          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_zaxw6mfrzo4p78zj9bq8',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_q7xwyzqowjcuosmz0ax1',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_iifxtlvgn3gvliuq2c5w',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_ejxja6xcizpbh2m5o4lt',}, 
+          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_ilqzj9io1c1xyquh8dox',}, 
+          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_hws3y5nuv01aa9tdytyn',}, 
+          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_te13sql6b7a4xvrcprw6',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_lih49jyir83skadf6v1j',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_z6pwdpde6uhr5fao1v7x',}, 
+          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_babyqldgcyj5iboyiveo',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_ajetdprw2lzs4aj37s2b(cell.i, cell.j, group.css_id);
+                  styleCell_2yzcck3d3ybqdbmxuwmm(cell.i, cell.j, group.css_id);
               });
           });
       });
     </script><style>
       /* tinytable css entries after */
-      .table td.tinytable_css_k58lmksn4fe6x7ezhz2o, .table th.tinytable_css_k58lmksn4fe6x7ezhz2o { text-align: center; text-align: center; }
-      .table td.tinytable_css_3z59wy1kjzh2csvandkh, .table th.tinytable_css_3z59wy1kjzh2csvandkh { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_61ud8b3qhex85ul64ix4, .table th.tinytable_css_61ud8b3qhex85ul64ix4 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_yixxb21q8juxgafopndk, .table th.tinytable_css_yixxb21q8juxgafopndk { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_fg3p1ozz7q6mpl1yzb1f, .table th.tinytable_css_fg3p1ozz7q6mpl1yzb1f { text-align: center; }
-      .table td.tinytable_css_myp1drfqmtmqoy79f4p3, .table th.tinytable_css_myp1drfqmtmqoy79f4p3 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_qt9ab6fqcj1uyrr0ujgf, .table th.tinytable_css_qt9ab6fqcj1uyrr0ujgf { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_cz57v9llmeemxq9wz5hy, .table th.tinytable_css_cz57v9llmeemxq9wz5hy { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_wubkd8g1e1glegdv12gu, .table th.tinytable_css_wubkd8g1e1glegdv12gu { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_ywdgluloplfre5cyf4u1, .table th.tinytable_css_ywdgluloplfre5cyf4u1 { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_5k4wbyqehrtjjbpu7rt6, .table th.tinytable_css_5k4wbyqehrtjjbpu7rt6 { text-align: left; }
-      .table td.tinytable_css_nkh7uidr7wwyjvk7c011, .table th.tinytable_css_nkh7uidr7wwyjvk7c011 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_rtc7nma2hbhpwf6lm8op, .table th.tinytable_css_rtc7nma2hbhpwf6lm8op { text-align: left; text-align: center; }
-      .table td.tinytable_css_ul5chmy0ohjdxtnvf2r9, .table th.tinytable_css_ul5chmy0ohjdxtnvf2r9 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_duzwi7idkf993yciscwz, .table th.tinytable_css_duzwi7idkf993yciscwz { text-align: center; text-align: center; }
+      .table td.tinytable_css_9h5vo5vnt5jmpwhxugke, .table th.tinytable_css_9h5vo5vnt5jmpwhxugke { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_8w8123yjcvmgnqipdz3k, .table th.tinytable_css_8w8123yjcvmgnqipdz3k { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_k75u2qkpnysjlawkta9d, .table th.tinytable_css_k75u2qkpnysjlawkta9d { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_zaxw6mfrzo4p78zj9bq8, .table th.tinytable_css_zaxw6mfrzo4p78zj9bq8 { text-align: center; }
+      .table td.tinytable_css_q7xwyzqowjcuosmz0ax1, .table th.tinytable_css_q7xwyzqowjcuosmz0ax1 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_iifxtlvgn3gvliuq2c5w, .table th.tinytable_css_iifxtlvgn3gvliuq2c5w { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_ejxja6xcizpbh2m5o4lt, .table th.tinytable_css_ejxja6xcizpbh2m5o4lt { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_ilqzj9io1c1xyquh8dox, .table th.tinytable_css_ilqzj9io1c1xyquh8dox { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_hws3y5nuv01aa9tdytyn, .table th.tinytable_css_hws3y5nuv01aa9tdytyn { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_te13sql6b7a4xvrcprw6, .table th.tinytable_css_te13sql6b7a4xvrcprw6 { text-align: left; }
+      .table td.tinytable_css_lih49jyir83skadf6v1j, .table th.tinytable_css_lih49jyir83skadf6v1j { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_z6pwdpde6uhr5fao1v7x, .table th.tinytable_css_z6pwdpde6uhr5fao1v7x { text-align: left; text-align: center; }
+      .table td.tinytable_css_babyqldgcyj5iboyiveo, .table th.tinytable_css_babyqldgcyj5iboyiveo { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
 <div class="container">
-      <div class="inline-table"><table class="table table-borderless" id="tinytable_ajetdprw2lzs4aj37s2b" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <div class="inline-table"><table class="table table-borderless" id="tinytable_2yzcck3d3ybqdbmxuwmm" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
 <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -1329,7 +1343,7 @@ Full code you can adapt for the assessment
 
   <div class="col-12 col-md-6 mt-3">
     <p>"<strong><p><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</p></strong>" was written by </p>
-<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 12 August, 2025.
+<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 13 August, 2025.
   </div>
 
   <div class="col-12 col-md-6 mt-3">
