--- a/probit-application.html
+++ b/probit-application.html
@@ -71,11 +71,13 @@
 <li><a class="" href="website-features.html">Website Features</a></li>
 <li><a class="" href="accessibility.html">Accessibility</a></li>
 <li class="book-part">Week 1</li>
+<li><a class="" href="road-map-for-today.html">Road Map for Today</a></li>
 <li><a class="" href="introduction-to-r.html">Introduction to R</a></li>
 <li><a class="" href="homework-for-week-2.html">Homework for Week 2</a></li>
 <li><a class="" href="glossary.html">Glossary</a></li>
 <li><a class="" href="flashcards.html">Flashcards</a></li>
 <li class="book-part">Week 2</li>
+<li><a class="" href="road-map-for-today-1.html">Road Map for Today</a></li>
 <li><a class="" href="principles-of-statistical-inference.html">Principles of Statistical Inference</a></li>
 <li><a class="" href="linear-regression---theory.html">Linear Regression - Theory</a></li>
 <li><a class="" href="linear-regression-application.html">Linear Regression – Application</a></li>
@@ -83,6 +85,7 @@
 <li><a class="" href="glossary-1.html">Glossary</a></li>
 <li><a class="" href="flashcards-1.html">Flashcards</a></li>
 <li class="book-part">Week 3</li>
+<li><a class="" href="road-map-for-today-2.html">Road Map for Today</a></li>
 <li><a class="" href="probit---theory.html">Probit - Theory</a></li>
 <li><a class="active" href="probit-application.html">Probit – Application</a></li>
 <li><a class="" href="exercises.html">Exercises</a></li>
@@ -90,18 +93,21 @@
 <li><a class="" href="glossary-2.html">Glossary</a></li>
 <li><a class="" href="flashcards-2.html">Flashcards</a></li>
 <li class="book-part">Week 4</li>
+<li><a class="" href="road-map-for-today-3.html">Road Map for Today</a></li>
 <li><a class="" href="missing-data.html">Missing Data</a></li>
 <li><a class="" href="model-building.html">Model Building</a></li>
 <li><a class="" href="homework-for-week-5.html">Homework for Week 5</a></li>
 <li><a class="" href="glossary-3.html">Glossary</a></li>
 <li><a class="" href="flashcards-3.html">Flashcards</a></li>
 <li class="book-part">Week 5</li>
+<li><a class="" href="road-map-for-today-4.html">Road Map for Today</a></li>
 <li><a class="" href="consolidation.html">Consolidation</a></li>
 <li><a class="" href="exercises-1.html">Exercises</a></li>
 <li><a class="" href="homework-for-week-7.html">Homework for Week 7</a></li>
 <li><a class="" href="glossary-4.html">Glossary</a></li>
 <li><a class="" href="flashcards-4.html">Flashcards</a></li>
 <li class="book-part">Week 7</li>
+<li><a class="" href="road-map-for-today-5.html">Road Map for Today</a></li>
 <li><a class="" href="markov-transition-models.html">Markov Transition Models</a></li>
 <li><a class="" href="model-fit-in-binary-response-models.html">Model Fit in Binary Response Models9</a></li>
 <li><a class="" href="joint-estimation-of-emergence-and-survival.html">Joint Estimation of Emergence and Survival</a></li>
@@ -109,6 +115,14 @@
 <li><a class="" href="homework-for-week-8.html">Homework for Week 8</a></li>
 <li><a class="" href="glossary-5.html">Glossary</a></li>
 <li><a class="" href="flashcards-5.html">Flashcards</a></li>
+<li class="book-part">Week 8</li>
+<li><a class="" href="road-map-for-today-6.html">Road Map for Today</a></li>
+<li><a class="" href="homework-for-week-9.html">Homework for Week 9</a></li>
+<li class="book-part">Week 9</li>
+<li><a class="" href="road-map-for-today-7.html">Road Map for Today</a></li>
+<li><a class="" href="homework-for-week-10.html">Homework for Week 10</a></li>
+<li class="book-part">Week 10</li>
+<li><a class="" href="road-map-for-today-8.html">Road Map for Today</a></li>
 <li class="book-part">Markdown</li>
 <li><a class="" href="professional-writing-in-political-science.html">Professional Writing in Political Science</a></li>
 <li><a class="" href="introduction-to-markdown.html">Introduction to Markdown</a></li>
@@ -319,8 +333,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_pyhv29jeb1fmbkpck790(i, j, css_id) {
-          var table = document.getElementById("tinytable_pyhv29jeb1fmbkpck790");
+      function styleCell_1rzsjzywgdpdygcwg6wj(i, j, css_id) {
+          var table = document.getElementById("tinytable_1rzsjzywgdpdygcwg6wj");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -330,7 +344,7 @@ Number of Fisher Scoring iterations: 5</code></pre>
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_pyhv29jeb1fmbkpck790');
+        var table = document.getElementById('tinytable_1rzsjzywgdpdygcwg6wj');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -338,8 +352,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_pyhv29jeb1fmbkpck790(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_pyhv29jeb1fmbkpck790");
+      function spanCell_1rzsjzywgdpdygcwg6wj(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_1rzsjzywgdpdygcwg6wj");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -369,36 +383,36 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_him3i5qa3xvp9d1inei3',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_uj6fw1036a2n3992gghj',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_i588rf9gksr7z9j81tyg',}, 
-          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_gwu9roph0yoli1t80ecv',}, 
-          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_61mz75hjcoo1ms2b3y96',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_9v9bogyhxvviatdogt88',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_4k5y3ix8quj0ct10ku5c',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_oth91tuuu0a5ua84d8m9',}, 
+          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_wblqusmneve0yxz8sql6',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_9lui8aj8gqwraajiym6u',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_jf8jqci24v7ar8ql8yqt',}, 
+          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_bwmmxg81oo8mzvpfof5d',}, 
+          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_ap050wny5l9f4bncnfjf',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_kjztro93oagleo9l5ejq',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_l6dd2rntsk1bc5k3s1yu',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_hlzr0bc8gu9aspbqp2jq',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_pyhv29jeb1fmbkpck790(cell.i, cell.j, group.css_id);
+                  styleCell_1rzsjzywgdpdygcwg6wj(cell.i, cell.j, group.css_id);
               });
           });
       });
     </script><style>
       /* tinytable css entries after */
-      .table td.tinytable_css_him3i5qa3xvp9d1inei3, .table th.tinytable_css_him3i5qa3xvp9d1inei3 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_uj6fw1036a2n3992gghj, .table th.tinytable_css_uj6fw1036a2n3992gghj { text-align: center; }
-      .table td.tinytable_css_i588rf9gksr7z9j81tyg, .table th.tinytable_css_i588rf9gksr7z9j81tyg { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_gwu9roph0yoli1t80ecv, .table th.tinytable_css_gwu9roph0yoli1t80ecv { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_61mz75hjcoo1ms2b3y96, .table th.tinytable_css_61mz75hjcoo1ms2b3y96 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_9v9bogyhxvviatdogt88, .table th.tinytable_css_9v9bogyhxvviatdogt88 { text-align: left; }
-      .table td.tinytable_css_4k5y3ix8quj0ct10ku5c, .table th.tinytable_css_4k5y3ix8quj0ct10ku5c { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_oth91tuuu0a5ua84d8m9, .table th.tinytable_css_oth91tuuu0a5ua84d8m9 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_wblqusmneve0yxz8sql6, .table th.tinytable_css_wblqusmneve0yxz8sql6 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_9lui8aj8gqwraajiym6u, .table th.tinytable_css_9lui8aj8gqwraajiym6u { text-align: center; }
+      .table td.tinytable_css_jf8jqci24v7ar8ql8yqt, .table th.tinytable_css_jf8jqci24v7ar8ql8yqt { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_bwmmxg81oo8mzvpfof5d, .table th.tinytable_css_bwmmxg81oo8mzvpfof5d { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_ap050wny5l9f4bncnfjf, .table th.tinytable_css_ap050wny5l9f4bncnfjf { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_kjztro93oagleo9l5ejq, .table th.tinytable_css_kjztro93oagleo9l5ejq { text-align: left; }
+      .table td.tinytable_css_l6dd2rntsk1bc5k3s1yu, .table th.tinytable_css_l6dd2rntsk1bc5k3s1yu { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_hlzr0bc8gu9aspbqp2jq, .table th.tinytable_css_hlzr0bc8gu9aspbqp2jq { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
 <div class="container">
-      <div class="inline-table"><table class="table table-borderless" id="tinytable_pyhv29jeb1fmbkpck790" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <div class="inline-table"><table class="table table-borderless" id="tinytable_1rzsjzywgdpdygcwg6wj" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
 <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -489,8 +503,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_42n554vq5duca8devxkg(i, j, css_id) {
-          var table = document.getElementById("tinytable_42n554vq5duca8devxkg");
+      function styleCell_jhvym4o1c2zuoxi3853d(i, j, css_id) {
+          var table = document.getElementById("tinytable_jhvym4o1c2zuoxi3853d");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -500,7 +514,7 @@ Number of Fisher Scoring iterations: 5</code></pre>
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_42n554vq5duca8devxkg');
+        var table = document.getElementById('tinytable_jhvym4o1c2zuoxi3853d');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -508,8 +522,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_42n554vq5duca8devxkg(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_42n554vq5duca8devxkg");
+      function spanCell_jhvym4o1c2zuoxi3853d(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_jhvym4o1c2zuoxi3853d");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -539,36 +553,36 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_cswm57fhu4xk6bofo440',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_82zd372v3fvcsfap90iv',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_yujdxzqjlbs55hte03rj',}, 
-          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_9h8z0c9dxjo1ltfeyqxm',}, 
-          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_cw4gnor9m0viu218ed2w',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_0jc93x3oput8m9tyqxww',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_uybtubwqorsd6t3qsssr',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_nsr6kkz9kgh5eg3vdc9e',}, 
+          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_a6ky8g2nc1s6hzsaubwo',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_1olnfleowlpd86bacjjg',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_eyhpzkuqekag88fpgk1p',}, 
+          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_lizvs936ax3jbzwl5hf0',}, 
+          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_zfxe63rilakr4shromb5',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_hkvof8tmivm6bpvedaby',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_jhiwubhdrnggqclmt0js',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_0000927ese81122q3ile',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_42n554vq5duca8devxkg(cell.i, cell.j, group.css_id);
+                  styleCell_jhvym4o1c2zuoxi3853d(cell.i, cell.j, group.css_id);
               });
           });
       });
     </script><style>
       /* tinytable css entries after */
-      .table td.tinytable_css_cswm57fhu4xk6bofo440, .table th.tinytable_css_cswm57fhu4xk6bofo440 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_82zd372v3fvcsfap90iv, .table th.tinytable_css_82zd372v3fvcsfap90iv { text-align: center; }
-      .table td.tinytable_css_yujdxzqjlbs55hte03rj, .table th.tinytable_css_yujdxzqjlbs55hte03rj { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_9h8z0c9dxjo1ltfeyqxm, .table th.tinytable_css_9h8z0c9dxjo1ltfeyqxm { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_cw4gnor9m0viu218ed2w, .table th.tinytable_css_cw4gnor9m0viu218ed2w { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_0jc93x3oput8m9tyqxww, .table th.tinytable_css_0jc93x3oput8m9tyqxww { text-align: left; }
-      .table td.tinytable_css_uybtubwqorsd6t3qsssr, .table th.tinytable_css_uybtubwqorsd6t3qsssr { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_nsr6kkz9kgh5eg3vdc9e, .table th.tinytable_css_nsr6kkz9kgh5eg3vdc9e { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_a6ky8g2nc1s6hzsaubwo, .table th.tinytable_css_a6ky8g2nc1s6hzsaubwo { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_1olnfleowlpd86bacjjg, .table th.tinytable_css_1olnfleowlpd86bacjjg { text-align: center; }
+      .table td.tinytable_css_eyhpzkuqekag88fpgk1p, .table th.tinytable_css_eyhpzkuqekag88fpgk1p { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_lizvs936ax3jbzwl5hf0, .table th.tinytable_css_lizvs936ax3jbzwl5hf0 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_zfxe63rilakr4shromb5, .table th.tinytable_css_zfxe63rilakr4shromb5 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_hkvof8tmivm6bpvedaby, .table th.tinytable_css_hkvof8tmivm6bpvedaby { text-align: left; }
+      .table td.tinytable_css_jhiwubhdrnggqclmt0js, .table th.tinytable_css_jhiwubhdrnggqclmt0js { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_0000927ese81122q3ile, .table th.tinytable_css_0000927ese81122q3ile { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
 <div class="container">
-      <div class="inline-table"><table class="table table-borderless" id="tinytable_42n554vq5duca8devxkg" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <div class="inline-table"><table class="table table-borderless" id="tinytable_jhvym4o1c2zuoxi3853d" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
 <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -709,7 +723,7 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
   <div class="col-12 col-md-6 mt-3">
     <p>"<strong><p><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</p></strong>" was written by </p>
-<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 12 August, 2025.
+<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 13 August, 2025.
   </div>
 
   <div class="col-12 col-md-6 mt-3">
